Modifications to config gru

--- a/conf/yolov3-gru.cfg
+++ b/conf/yolov3-gru.cfg
@@ -605,6 +605,11 @@ pad=1
 filters=255
 activation=linear
 
+[convgru]
+size=3
+stride=1
+pad=1
+filters=255
 
 [yolo]
 mask = 6,7,8
@@ -615,9 +620,6 @@ jitter=.3
 ignore_thresh = .5
 truth_thresh = 1
 random=1
-
-[convgru]
-size = 3
 
 
 [route]
@@ -694,6 +696,11 @@ pad=1
 filters=255
 activation=linear
 
+[convgru]
+size=3
+stride=1
+pad=1
+filters=255
 
 [yolo]
 mask = 3,4,5
@@ -704,9 +711,6 @@ jitter=.3
 ignore_thresh = .5
 truth_thresh = 1
 random=1
-
-[convgru]
-size = 3
 
 
 [route]
@@ -783,6 +787,11 @@ pad=1
 filters=255
 activation=linear
 
+[convgru]
+size=3
+stride=1
+pad=1
+filters=255
 
 [yolo]
 mask = 0,1,2
@@ -793,6 +802,3 @@ jitter=.3
 ignore_thresh = .5
 truth_thresh = 1
 random=1
-
-[convgru]
-size = 3
